// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class-static-block.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  static #x = 42;
  static y;
  static {
    try {
      this.y = doSomethingWith(this.#x);
    } catch {
      this.y = "unknown";
    }
  }
}
  
class Foo {
  static {}
}
  
class A1 {
  static {
    foo;
  }
}
  
class A2 {
  static {
    foo;
    bar;
  }
}
  
=====================================output=====================================
class C {
  static #x = 42;
  static y;
  static {
    try {
      this.y = doSomethingWith(this.#x);
    } catch {
      this.y = "unknown";
    }
  }
}

class Foo {
  static {}
}

class A1 {
  static {
    foo;
  }
}

class A2 {
  static {
    foo;
    bar;
  }
}

================================================================================
`;

exports[`with-line-breaks.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  static
  {
     1 + 1;
  }
};

=====================================output=====================================
class Foo {
  static {
    1 + 1;
  }
}

================================================================================
`;
